tests/data/parseerror/invalid-class-1.php
<?php

class $TokenReflection_Test_ParseInvalidClass11
{

}
